samples/_failures_safe/1761548270_394b08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce55c1e3.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_ce55c1e3.c:126:17: error: expected declaration or statement at end of input
  126 |                 if (j == x) continue;
      |                 ^~
./samples/SAFE/__tmp_ce55c1e3.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce55c1e3.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce55c1e3.c:126:17: error: expected declaration or statement at end of input
